Added closechannelbreach command
